--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.cebbank.bdap</groupId>
+    <groupId>com.spengo.bdap</groupId>
     <artifactId>mockrest</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -118,7 +118,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.cebbank.bdap.MockRestServerApplication</mainClass>
+                            <mainClass>com.spengo.bdap.MockRestServerApplication</mainClass>
                         </manifest>
                     </archive>
                     <excludes>
